atlantis-actions/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlantis-actions
  labels:
    app: atlantis-actions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlantis-actions
  template:
    metadata:
      labels:
        app: atlantis-actions
    spec:
      containers:
        - name: atlantis-actions
          image: registry.services.atlantishq.de/atlantishq/atlantis-status
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /app/services/config.yaml
              subPath: config
      volumes:
        - name: config-volume
          secret:
            secretName: atlantis-actions-config-secret
            items:
              - key: config
                path: config
